@@ -40,6 +40,9 @@ a:hover{color:#708090;}
 .filibuster-audio{margin-top:0px;margin-bottom:30px;}
 .filibuster-video{margin-top:0px;margin-bottom:30px;}
 
+/* MULTIMEDIA */
+.filibuster-screen{text-align:center;}
+
 /* GALLERY */
 .filibuster-gallery{position:relative;margin-bottom:2em;}
 .filibuster-transform{position:absolute;width:100%;height:100%}
