@@ -1,4 +1,10 @@
 ==================================
+Rilascio 1.70.04    del 05/07/2015
+==================================
+
+Filibuster: aggiustamenti per mobile.
+
+==================================
 Rilascio 1.70.03    del 04/07/2015
 ==================================
 
